fixed toggle button position on mobile

--- a/client/src/components/mobile-nav/mobile-nav.scss
+++ b/client/src/components/mobile-nav/mobile-nav.scss
@@ -2,7 +2,7 @@
 
 button.toggle {
   position: fixed;
-  top: 25px;
+  top: 17.5px;
   right: 20px;
   width: 50px;
   height: 50px;
@@ -45,9 +45,9 @@ button.toggle {
 
     img {
       position: absolute;
-      top: 20px;
+      top: 12.75px;
       left: 20px;
-      width: 60px;
+      width: 59.5px;
     }
 
     .mobile {
