--- a/client/src/components/skills/skills.scss
+++ b/client/src/components/skills/skills.scss
@@ -22,7 +22,7 @@
       grid-gap: 15px;
 
       .skill-box {
-        border-radius: 20px;
+        border-radius: 4px;
         padding: 15px;
         box-sizing: border-box;
         box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
